Build StrobeLights for Paper 1.20.1